[package]
name = "httptest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.5.2", features = ["full"] }
tokio = { version = "1.42.0", features = ["full"] }
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.9", features = [
	"blocking",
	"rustls-tls",
	"cookies",
] }
rustls = "0.23.20"
webpki = "0.22.4"
scraper = "0.22.0"
